[tool.poetry]
name = "tum-ub-reserve"
version = "0.1.0"
description = ""
authors = ["Sandro Pischinger <mail@sandropischinger.de>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
